--- a/Joiefull/Joiefull/Shared/Ressources/Launch Screen.storyboard
+++ b/Joiefull/Joiefull/Shared/Ressources/Launch Screen.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24412" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="24506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24405"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="24504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,31 +17,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="appLogo" translatesAutoresizingMaskIntoConstraints="NO" id="Pj2-nV-Byh">
-                                <rect key="frame" x="76" y="362" width="240" height="128"/>
+                                <rect key="frame" x="17" y="381" width="359" height="90"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="Ofw-zf-yYD"/>
-                                    <constraint firstAttribute="width" constant="240" id="jpO-Cd-aBq"/>
-                                    <constraint firstAttribute="width" secondItem="Pj2-nV-Byh" secondAttribute="height" multiplier="15:8" id="kI8-ax-hHM"/>
+                                    <constraint firstAttribute="height" constant="90" id="J02-Wi-j28"/>
+                                    <constraint firstAttribute="width" constant="359" id="lWv-DC-3LY"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" name="joieFullOrange"/>
                         <constraints>
-                            <constraint firstItem="Pj2-nV-Byh" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="UlZ-gt-nKH"/>
-                            <constraint firstItem="Pj2-nV-Byh" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="244" id="cAt-EQ-jjL"/>
-                            <constraint firstItem="Pj2-nV-Byh" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="76" id="n25-fs-WAo"/>
-                            <constraint firstItem="Pj2-nV-Byh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="xbP-Mq-UPU"/>
+                            <constraint firstItem="Pj2-nV-Byh" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Ril-lB-zM3"/>
+                            <constraint firstItem="Pj2-nV-Byh" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="lkA-Z3-A55"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.671755725190835" y="374.64788732394368"/>
         </scene>
     </scenes>
     <resources>
-        <image name="appLogo" width="66.333335876464844" height="16.666666030883789"/>
+        <image name="appLogo" width="359" height="90"/>
         <namedColor name="joieFullOrange">
             <color red="0.97647058963775635" green="0.62352943420410156" blue="0.26274511218070984" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
